# openai-pygenerator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.txt  MANIFEST.in  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml  python-publish.yml
src/: example.py  openai_pygenerator.py
src/openai_pygenerator/: __init__.py  example.py  gpt.py  openai_pygenerator.py
tests/: test_gpt.py
