[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/version.py"

[tool.pytest.ini_options]
pythonpath = "src"

[project]
name = "openai_pygenerator"
dynamic = ["version"]

authors = [
  { name="Steve Phelps", email="sphelps@sphelps.net" },
]
description = "Simple generator wrapper for OpenAI Python API with retry"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/phelps-sg/openai-pygenerator"
"Bug Tracker" = "https://github.com/phelps-sg/openai-pygenerator/issues"