[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_optons]
pythonpath = ["src"]

[project]
name = "openai-pygenerator"
dynamic = ["version"]

authors = [
  { name="Steve Phelps", email="sphelps@sphelps.net" },
]
description = "Simple generator wrapper for OpenAI Python API with retry"
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/phelps-sg/openai-pygenerator"
"Bug Tracker" = "https://github.com/phelps-sg/openai-pygenerator/issues"

[tool.poetry]
name = "openai-pygenerator"
version = "0.0.0"
description = "Simple generator wrapper for OpenAI Python API with retry"
authors = ["Steve Phelps <phelps.sg@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include="openai_pygenerator", from="src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^0.28.1"
returns = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pylint = "^3.0.1"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
black = {extras = ["d"], version = "^23.9.1"}
pynvim = "*"

[tool.poetry-dynamic-versioning]
enable = true
