[metadata]
name = openai_pygenerator
version = attr: setuptools_scm.get_version

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    openai_pygenerator = openai_pygenerator:main

[tool.setuptools_scm]
write_to = openai_pygenerator/version.py
